Adds AAA comments to project controller tests